Revert "Fix carousel visibility on mobile"
This reverts commit 97e6fa866669b1ac2d6e8bf8c181cac558e62f22.

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -85,11 +85,6 @@
   .swiper-lazy-preloader {
     --swiper-preloader-color: theme('colors.jungle-lime');
   }
-
-  /* Hide scrollbar on native mobile carousel row */
-  .scrollbar-none::-webkit-scrollbar {
-    display: none;
-  }
 }
 
 @layer utilities {
